--- a/index.html
+++ b/index.html
@@ -26,14 +26,15 @@
         <H1 class="welcom-header__title">Welcome to kokoa clone talk</H1>
         <p class="welcom-header__text">If you have a kokoa Account, login in with your email or phone number.</p>
     </header>
-    <form id="login-form">
-        <input type="text" placeholder="Email or phone number" />
-        <input type="password" placeholder="Password" />
+
+    <form action="friends.html" method="get" id="login-form">
+        <input name="email" type="text" placeholder="Email or phone number" />
+        <input name="password" type="password" placeholder="Password" />
         <input type="submit" value="Log in" />
         <a href="#"> Find kokoa Account or Password</a>
     </form>
 
-
     <script src="https://kit.fontawesome.com/2ee03a44c2.js" crossorigin="anonymous"></script>
 </body>
 </html>
+
