--- a/index.html
+++ b/index.html
@@ -34,6 +34,12 @@
         <a href="#"> Find kokoa Account or Password</a>
     </form>
 
+    
+    <div id="no-mobile">
+        <span>화면이 너무 커요 흑흑</span>
+    </div>
+
+
     <script src="https://kit.fontawesome.com/2ee03a44c2.js" crossorigin="anonymous"></script>
 </body>
 </html>
