header icon update

--- a/chats.html
+++ b/chats.html
@@ -47,7 +47,7 @@
             <span><i class="fas fa-search fa-sm"></i></span>
             <span><i class="fas fa-comment-medical"></i></span>
             <span><i class="fas fa-music fa-sm"></i></span>
-            <span><i class="fas fa-cog fa-sm"></i></span>
+            <a href="settings.html"><span><i class="fas fa-cog fa-sm"></i></span></a>
         </div>
     </header>
 
