--- a/friends.html
+++ b/friends.html
@@ -46,7 +46,7 @@
         <div class="kokoa-header__column">
             <span><i class="fas fa-search fa-sm"></i></span>
             <span><i class="fas fa-music fa-sm"></i></span>
-            <span><i class="fas fa-cog fa-sm"></i></span>
+            <a href="settings.html"><span><i class="fas fa-cog fa-sm"></i></span></a>
         </div>
     </header>
 
